[package]
name = "labelmaker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_overlay = "0.4.0"
pico-args = "0.5"

[features]
default = ["eq-separator"]
eq-separator = ["pico-args/eq-separator"]
