[package]
name = "labelmaker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
pico-args = "0.5"

[features]
default = ["eq-separator"]
eq-separator = ["pico-args/eq-separator"]
